check_output_2.txt
    Checking ring v0.17.14
    Checking rustls-webpki v0.103.9
    Checking sct v0.7.1
    Checking rustls-webpki v0.101.7
    Checking jsonwebtoken v9.3.1
    Checking rustls v0.23.36
    Checking rustls v0.21.12
    Checking tokio-rustls v0.24.1
    Checking hyper-rustls v0.24.2
    Checking tokio-rustls v0.26.4
    Checking reqwest v0.11.27
    Checking hyper-rustls v0.27.7
    Checking reqwest v0.12.28
    Checking jsonschema v0.19.1
    Checking assay-core v2.12.0 (/Users/roelschuurkes/assay/crates/assay-core)
    Checking assay-metrics v2.12.0 (/Users/roelschuurkes/assay/crates/assay-metrics)
    Checking assay-mcp-server v2.12.0 (/Users/roelschuurkes/assay/crates/assay-mcp-server)
warning: unused import: `DecodingKey`
 --> crates/assay-mcp-server/src/auth/validation.rs:5:54
  |
5 | use jsonwebtoken::{decode, decode_header, Algorithm, DecodingKey, Validation};
  |                                                      ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: `DecodingKey` doesn't implement `Debug`
  --> crates/assay-mcp-server/src/auth/jwks.rs:28:5
   |
26 | #[derive(Debug, Clone)]
   |          ----- in this derive macro expansion
27 | pub struct JwksProvider {
28 |     cache: Cache<String, Arc<DecodingKey>>, // map kid -> key
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `DecodingKey`
   |
   = help: the trait `Debug` is implemented for `Cache<K, V, S>`

For more information about this error, try `rustc --explain E0277`.
warning: `assay-mcp-server` (lib) generated 1 warning
error: could not compile `assay-mcp-server` (lib) due to 1 previous error; 1 warning emitted
